# autodetect

./: .buildinfo  README.md  api.html  autocusum.html  environment.yml  genindex.html  index.html  latent.html  objects.inv  pyproject.toml  search.html  searchindex.js  simple.html  start.html  time.html  topic.html
.github/workflows/: doc.yml
_sources/: api.rst.txt  autocusum.rst.txt  simple.rst.txt  topic.rst.txt
application/: preprocess.sh  preprocessing.py  run_tv_shows.sh  stopwords.txt  tv_shows.py
autodetect/: __init__.py  autocusum.py  autograd.py  autotest_func.py  basic.py  hmm.py  topic.py  utils.py
autodetect/data/: __init__.py  generator.py  models.py
autodetect/data/subtitles/: deadwood_S1.txt  deadwood_S2.txt  friends_S1.txt  friends_S2.txt  friends_S3.txt  modern_S1.txt  modern_S2.txt  the_sopranos_S1.txt  the_sopranos_S2.txt  the_sopranos_S3.txt
docs/: api.rst  autocusum.rst  conf.py  index.rst  latent.rst  simple.rst  start.rst  time.rst
simulation/: run_simulation.py  run_simulation.sh  simulations.py  utils.py
simulation/text_files/: brownS15_pars.txt  brownS3_pars.txt  brownS7_pars.txt  hmmS15_pars.txt  hmmS3_pars.txt  hmmS7_pars.txt
