[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "autodetect"
dynamic = ["version"]
description = "A library for detecting hidden changes in machine learning systems as they learn from a continuous, possibly evolving, stream of data."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    {name = "Lang Liu", email = "langliu195@gmail.com"},
]
keywords = [
    "python",
    "machine learning",
    "change detection",
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.21",
  "torch>=1.6",
  "scipy",
  "scikit-learn",
]

[project.optional-dependencies]
docs = [
    "sphinx>=6.0.0",
    "sphinx_book_theme>=1.0.1",
    "sphinxcontrib-katex",
    "sphinx-autodoc-typehints",
    "ipython>=8.8.0",
    "myst-nb>=1.0.0",
    "sphinx-gallery>=0.14.0",
    "sphinx-collections>=0.0.1",
    "sphinx_contributors",
]

[tool.setuptools.packages.find]
include = ["README.md", "LICENSE"]
exclude = ["*_test.py"]
